MPEG2 Transport Stream wiretap module wrongly opens EyeSDN trace files
This issue was migrated from bug 7132 in our old bug tracker.
Original bug information:
Reporter: Rolf Fiedler
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: All
Version: Git
Attachments:
mp2t-eyesdn.patch: patch to fix mp2t.c to reject more byte streams that are not MPEG2
X-1-Anonymous-Anonymous-X11H-UNKNOWN-16d04m2012y-13h48m19s-0a0None.trc: EyeSDN trace file to demo the bug